MET-4952 Unify code formatter with metis project